# 2017-tfm-sergio-izquierdo

./: README.md  camera.txt
CameraCalibration/: CameraCalibration.pro  cameracalibrator.cpp  cameracalibrator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
SVDL-app/: build_script.sh
SVDL-app/app/: build.gradle
SVDL-app/app/src/androidTest/java/com/example/seriznue/svdl_app/: ExampleInstrumentedTest.java
SVDL-app/app/src/main/: AndroidManifest.xml
SVDL-app/app/src/main/cpp/: native-lib.cpp
SVDL-app/app/src/main/java/com/example/seriznue/svdl_app/: AxisPointsGenerator.java  Camera.java  MainActivity.java  OpencvNativeClass.java
SVDL-app/app/src/main/jni/: Android.mk  com_example_seriznue_svdl_app_OpencvNativeClass.cpp  com_example_seriznue_svdl_app_OpencvNativeClass.h
SVDL-app/app/src/main/jniLibs/local/armeabi-v7a/objs-debug/MyOpencvLibs/: com_example_seriznue_svdl_app_OpencvNativeClass.o.d
SVDL-app/app/src/main/libs/armeabi-v7a/: gdb.setup
SVDL-app/app/src/main/res/layout/: activity_main.xml
SVDL-app/app/src/main/res/values/: strings.xml
SVDL-app/app/src/test/java/com/example/seriznue/svdl_app/: ExampleUnitTest.java
SVDL-app/gradle/wrapper/: gradle-wrapper.properties
SVDL-app/openCVLibrary249/: build.gradle
slam-SDVL/: CMakeLists.txt  build.sh  build_android.sh  camera.cc  clean_build.sh  config.cfg  config_.cfg  homography_init.cc  map.cc  video_source.cc
slam-SDVL/extra/: fast_detector.cc
svdlapp/app/: CMakeLists.txt  build.gradle
svdlapp/app/src/androidTest/java/seriznue/: ExampleInstrumentedTest.java
svdlapp/app/src/main/: AndroidManifest.xml  jniLibs
svdlapp/app/src/main/cpp/: native-lib.cpp
svdlapp/app/src/main/java/seriznue/: Camera.java  MainActivity.java
svdlapp/app/src/main/res/layout/: activity_main.xml
svdlapp/app/src/main/res/values/: strings.xml
svdlapp/app/src/test/java/seriznue/: ExampleUnitTest.java
svdlapp/gradle/wrapper/: gradle-wrapper.properties
